src/objects/Network_Relationship__c.object
<CustomObject>
    <description>Custom object to track Payment Relationships between doctors and offices.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Network Relationships</relationshipLabel>
        <relationshipName>Network_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bypass_VC_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass VC Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claims_Priced__c</fullName>
        <label>Claims Priced</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>N</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact Role</label>
        <referenceTo>Contact_Role__c</referenceTo>
        <relationshipName>Payment_Relationships</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Directory_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Directory Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Directory_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Directory End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Doctor_ID__c</fullName>
        <description>Doctor ID of associated Contact record</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Doctor ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Reason_Calculation__c</fullName>
        <description>Calculates the Vision Care Exception Reasons from Practice Account, Business Account, Contact, and Contact Role and displays the exception if the Program ID = VSP</description>
        <formula>IF( Program_ID__r.Name  = &apos;VSP&apos; &amp;&amp; NOT(ISBLANK( TEXT(Account_Name__r.Parent.Vision_Care_Practice_Exception__c ))), TEXT(Account_Name__r.Parent.Vision_Care_Practice_Exception__c), 

IF(Program_ID__r.Name = &apos;VSP&apos; &amp;&amp; NOT(ISBLANK(TEXT( Account_Name__r.Vision_Care_Location_Exception__c ))), TEXT( Account_Name__r.Vision_Care_Location_Exception__c),

IF(Program_ID__r.Name = &apos;VSP&apos; &amp;&amp; NOT(ISBLANK(TEXT( Provider_Name__r.Vision_Care_Doctor_Exception__c ))), TEXT( Provider_Name__r.Vision_Care_Doctor_Exception__c), 

IF(Program_ID__r.Name = &apos;VSP&apos; &amp;&amp; NOT(ISBLANK(TEXT( Contact_Role__r.Vision_Care_Contact_Role_Exception__c ))), TEXT( Contact_Role__r.Vision_Care_Contact_Role_Exception__c), &quot;&quot;)
)
)
)</formula>
        <label>Exception Reason Calculation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exception Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Code__c</fullName>
        <defaultValue>&quot;NF&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Fee Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Worked__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hours Worked</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVC_Negotiated_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LVC Negotiated Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <formula>IF(OR(Program_End_Date__c&gt;= TODAY(), ISBLANK(Program_End_Date__c))
				, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <description>Converts Contact Role Type to Ownership Code for data integration</description>
        <formula>IF(ISPICKVAL(Contact_Role__r.Type__c, &quot;Doctor-Owner&quot;),&quot;O&quot;, 
    IF(ISPICKVAL(Contact_Role__r.Type__c, &quot;Doctor-Employee&quot;), &quot;E&quot;, &quot; &quot;))</formula>
        <label>Ownership</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Effective_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Program Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Program End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_ID_Code__c</fullName>
        <description>Code of Network ID from General Table</description>
        <formula>Program_ID__r.Name</formula>
        <label>Program ID Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup relationship field from Network Relationship to General Table object</description>
        <label>Program ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>General_Table__c.Table__c</field>
                <operation>equals</operation>
                <value>PRSP</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>General_Table__c</referenceTo>
        <relationshipLabel>Network Relationships</relationshipLabel>
        <relationshipName>Network_Relationships</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Term_Reason__c</fullName>
        <label>Program Term Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NOEN - Provider Not Enrolled/Registered with State</fullName>
                </value>
                <value>
                    <fullName>PLEF - Provider Left Office</fullName>
                </value>
                <value>
                    <fullName>PREQ - Provider Requested/Provider Initiated</fullName>
                </value>
                <value>
                    <fullName>NOEN-Provider Not Enrolled/Registered with State</fullName>
                    <isActive>false</isActive>
                    <label>NOEN-Provider Not Enrolled/Registered with State</label>
                </value>
                <value>
                    <fullName>PLEF- Provider Left Office</fullName>
                    <isActive>false</isActive>
                    <label>PLEF- Provider Left Office</label>
                </value>
                <value>
                    <fullName>PREQ-Provider Requested/Provider Initiated</fullName>
                    <isActive>false</isActive>
                    <label>PREQ-Provider Requested/Provider Initiated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Provider Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Network Relationships</relationshipLabel>
        <relationshipName>Network_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Role ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers an update on the record and sends outbound message for data integration</description>
        <label>Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VSP_Geo_Code__c</fullName>
        <formula>Account_Name__r.VSP_GeoCode__c</formula>
        <label>VSP Geo Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VSP_Network_Provider_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VSP Network Provider Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Care_Location_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Care Location Key</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Network Relationship</label>
    <listViews>
        <fullName>LVC_Network_Relationships</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Provider_Name__c</columns>
        <columns>Program_ID__c</columns>
        <columns>Program_Effective_Date__c</columns>
        <columns>Program_End_Date__c</columns>
        <columns>Vision_Care_Location_Key__c</columns>
        <columns>Role_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_ID__c</field>
            <operation>equals</operation>
            <value>LVC01</value>
        </filters>
        <label>LVC Network Relationships</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Network Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Network Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VSPR19b_Claims_Priced_Restriction</fullName>
        <active>true</active>
        <description>No changes can be made once claims have been priced against this Network Relationship.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Claims_Priced__c , &quot;Y&quot;),
OR(
ISCHANGED (Contact_Role__c),
ISCHANGED (Account_Name__c),
ISCHANGED (Provider_Name__c), 
ISCHANGED (Program_ID__c ),
ISCHANGED (Program_Effective_Date__c),
ISCHANGED (LVC_Negotiated_Discount__c),
ISCHANGED (Fee_Code__c))
)

&amp;&amp;
Bypass_VC_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>Claims have been priced against this Network Relationship. You cannot make any changes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR19b_Negotiated_Discount_0_To_100</fullName>
        <active>true</active>
        <description>LVC Negotiated Discount must be between 0 and 100. Ensures non-numeric text and values outside the range are not saved.</description>
        <errorConditionFormula>OR(LVC_Negotiated_Discount__c &lt; 0.00, LVC_Negotiated_Discount__c &gt; 1.00)
&amp;&amp;
NOT( $Profile.Name = &quot;System Administrator&quot; || $Profile.Name = &quot;VSP Technical User&quot;)

&amp;&amp;
Bypass_VC_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>You must enter an LVC Negotiated Discount of 0-100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR19b_Negotiated_Discount_Required</fullName>
        <active>true</active>
        <description>Require user to enter an LVC Negotiated Discount for Program ID LVC01</description>
        <errorConditionFormula>AND(
IF(
    AND(
        Program_ID__c = &quot;LVC01&quot;, 
        ISBLANK(LVC_Negotiated_Discount__c )), True, False
 )
,
NOT( $Profile.Name = &quot;System Administrator&quot; || $Profile.Name = &quot;VSP Technical User&quot;)
)

&amp;&amp;
Bypass_VC_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>You must enter an LVC Negotiated Discount for this Program ID</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR19b_Program_Effective_Date_Account</fullName>
        <active>true</active>
        <description>Program ID Effective Date cannot be less than the Account Vision Care Effective Date.</description>
        <errorConditionFormula>AND(
ISNEW()||ISCHANGED(Program_Effective_Date__c),
Program_Effective_Date__c &lt; Contact_Role__r.Account__r.Vision_Care_Effective_Date__c,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;VSP Technical User&quot;,
$Profile.Name &lt;&gt; &quot;VSP Integration User&quot;,
Bypass_VC_Validation_Rules__c = false
)</errorConditionFormula>
        <errorDisplayField>Program_Effective_Date__c</errorDisplayField>
        <errorMessage>Program Effective Date cannot be less than Vision Care Effective Date on associated Business Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR19b_Program_Effective_Date_Contact</fullName>
        <active>true</active>
        <description>Program Effective Date cannot be less than the Contact Vision Care Effective Date.</description>
        <errorConditionFormula>AND(
(ISNEW() || ISCHANGED(Program_Effective_Date__c)),
Program_Effective_Date__c &lt; Contact_Role__r.Contact__r.Vision_Care_Effective_Date__c,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;VSP Technical User&quot;,
Bypass_VC_Validation_Rules__c = false
)</errorConditionFormula>
        <errorDisplayField>Program_Effective_Date__c</errorDisplayField>
        <errorMessage>Program Effective Date cannot be less than Vision Care Effective Date on the associated Contact Record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR19b_Program_End_Date</fullName>
        <active>true</active>
        <description>Program End Date must be greater than the Effective Date</description>
        <errorConditionFormula>AND(
Program_End_Date__c &lt;= Program_Effective_Date__c,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;VSP Technical User&quot;,
Bypass_VC_Validation_Rules__c = false
)</errorConditionFormula>
        <errorDisplayField>Program_End_Date__c</errorDisplayField>
        <errorMessage>Program End Date must be greater than the Program Effective Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR19b_Restrict_Fee_Code_on_Non_CGVN</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND( 
ISNEW(),
Program_ID__r.Name &lt;&gt; &apos;CGVN&apos;,
Program_ID__r.Name &lt;&gt; &apos;HELEN&apos;,
ISPICKVAL( Claims_Priced__c , &apos;N&apos;),
Fee_Code__c &lt;&gt; &quot;NF&quot;
),
AND( 
NOT( ISNEW()),
ISCHANGED(Fee_Code__c ),
Program_ID__r.Name &lt;&gt; &apos;CGVN&apos;,
Program_ID__r.Name &lt;&gt; &apos;HELEN&apos;,
ISPICKVAL( Claims_Priced__c , &apos;N&apos;)
))
&amp;&amp; 

NOT(OR($Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;VSP Technical User&quot;)) 
&amp;&amp;
Bypass_VC_Validation_Rules__c = false</errorConditionFormula>
        <errorMessage>You cannot change the Fee Code for this Network Relationship.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR26_NonVisionCareValidation</fullName>
        <active>true</active>
        <description>Validation to prevent a user from creating a new Network Relationship the associated Contact does not have an active or future-dated active Vision Care Effective Date.</description>
        <errorConditionFormula>ISNEW()
				
&amp;&amp;

(	
				
	ISBLANK(Contact_Role__r.Contact__r.Vision_Care_Effective_Date__c)

||
		
Contact_Role__r.Contact__r.Vision_Care_End_Date__c &lt; TODAY()
				
)

&amp;&amp; 

NOT($Profile.Name = &quot;System Administrator&quot; || $Profile.Name = &quot;VSP Technical User&quot;)</errorConditionFormula>
        <errorMessage>The associated Contact must be Active or Future Dated Vision Care Provider.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR27_NonVisionCareAcctValidation</fullName>
        <active>true</active>
        <description>Validation to prevent a user from creating a new Network Relationship if the associated Account is not an active or future-dated Vision Care Business Account.</description>
        <errorConditionFormula>AND(
				OR(ISNEW(),ISCHANGED(Contact_Role__c)), 
				Contact_Role__r.Account__r.Active_or_Future_Vision_Care_Account__c == false
)
&amp;&amp; 
NOT($Profile.Name = &quot;System Administrator&quot; || $Profile.Name = &quot;VSP Technical User&quot;)</errorConditionFormula>
        <errorMessage>The associated Account must be an Active or Future Dated Vision Care Business Account.</errorMessage>
    </validationRules>
</CustomObject>